rust/surrealdb-orm-tests/tests/snapshots/geometry__insert_from_select_query.snap
---
source: surrealdb-orm-tests/tests/geometry.rs
expression: results
---
[
    GenZCompany {
        id: SurrealSimpleId(
            SurrealId(
                Thing {
                    tb: "gen_z_company",
                    id: Number(
                        1,
                    ),
                },
                PhantomData<geometry::GenZCompany>,
                PhantomData<alloc::string::String>,
            ),
        ),
        nam: UuidWrapper(
            Uuid(
                725cfebe-a7f2-4100-aeb3-7f73998fff02,
            ),
        ),
        name: "Acme Inc.",
        founded: Datetime(
            1967-05-03T00:00:00Z,
        ),
        founders: [
            Person {
                name: "John Doe",
            },
            Person {
                name: "Jane Doe",
            },
        ],
        tags: [
            "foo",
            "bar",
        ],
        home: Point(
            Point(
                Coord {
                    x: 45.3,
                    y: 78.1,
                },
            ),
        ),
    },
    GenZCompany {
        id: SurrealSimpleId(
            SurrealId(
                Thing {
                    tb: "gen_z_company",
                    id: Number(
                        2,
                    ),
                },
                PhantomData<geometry::GenZCompany>,
                PhantomData<alloc::string::String>,
            ),
        ),
        nam: UuidWrapper(
            Uuid(
                375cfebe-a7f2-4100-aeb3-7f73998fff02,
            ),
        ),
        name: "Apple Inc.",
        founded: Datetime(
            1967-05-03T00:00:00Z,
        ),
        founders: [
            Person {
                name: "John Doe",
            },
            Person {
                name: "Jane Doe",
            },
        ],
        tags: [
            "foo",
            "bar",
        ],
        home: Point(
            Point(
                Coord {
                    x: 63.0,
                    y: 21.0,
                },
            ),
        ),
    },
]
