rust/surrealdb-orm-tests/tests/snapshots/geometry__multiline-2.snap
---
source: surrealdb-orm-tests/tests/geometry.rs
expression: res_string
---
{"id":{"tb":"test_multilinestring","id":{"Number":32}},"homeMultilinestring":[[{"x":0.0,"y":0.0},{"x":1.0,"y":1.0},{"x":2.0,"y":2.0}],[{"x":3.0,"y":3.0},{"x":4.0,"y":4.0},{"x":5.0,"y":5.0}]]}
