rust/surrealdb-orm-tests/tests/snapshots/geometry__multiline.snap
---
source: surrealdb-orm-tests/tests/geometry.rs
expression: company
---
{"id":{"tb":"company","id":{"Object":{"id":{"Object":{"Number":{"Number":{"Int":32}}}},"tb":{"Strand":"company"}}}},"nam":[40,92,254,190,167,242,65,0,174,179,127,115,153,143,255,2],"name":"Mana Inc.","founded":[-84153600,0],"founders":[{"name":"John Doe"},{"name":"Jane Doe"}],"tags":["foo","bar"],"home":{"MultiLine":[[{"x":0.0,"y":0.0},{"x":1.0,"y":1.0},{"x":2.0,"y":2.0}],[{"x":3.0,"y":3.0},{"x":4.0,"y":4.0},{"x":5.0,"y":5.0}]]}}
