rust/surrealdb-orm-tests/tests/snapshots/geometry__multipoint-2.snap
---
source: surrealdb-orm-tests/tests/geometry.rs
expression: res_string
---
{"id":{"tb":"test_multipoint","id":{"Number":32}},"homeMultipoint":[{"x":0.0,"y":0.0},{"x":1.0,"y":1.0},{"x":2.0,"y":35.0}]}
